--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,4 +1,5 @@
 name: neutron-proxy
+region: nyc
 services:
   - dockerfile_path: Dockerfile
     github:
@@ -6,5 +7,5 @@ services:
       deploy_on_push: true
       repo: dalihsusilo/neutron-proxy
     name: neutron-proxy
-    internal_ports:
+    http_port:
       - 3128
