--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -6,3 +6,4 @@ spec:
         branch: master
         repo_clone_url: https://github.com/dalihsusilo/neutron-proxy.git
       name: neutron-proxy
+      http_port: 3128
