--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -7,3 +7,5 @@ spec:
         repo_clone_url: https://github.com/dalihsusilo/neutron-proxy.git
       name: neutron-proxy
       http_port: 3128
+      routes:
+        - path: /
