--- a/squid.conf
+++ b/squid.conf
@@ -61,18 +61,21 @@ http_access deny to_linklocal
 # INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
 #
 
-# For example, to allow access from your local networks, you may uncomment the
-# following rule (and/or add rules that match your definition of "local"):
-# http_access allow localnet
-
-# And finally deny all other access to this proxy
-http_access allow all
+# https://gist.github.com/jackblk/fdac4c744ddf2a0533278a38888f3caf
+auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
+auth_param basic realm Squid proxy-caching web server
+auth_param basic credentialsttl 24 hours
+auth_param basic casesensitive off
+acl authenticated proxy_auth REQUIRED
+http_access allow authenticated
+http_access deny all
+dns_v4_first on
+# https://serverfault.com/questions/380392/squid-proxy-hiding-the-proxy
+forwarded_for delete
+via off
 
 # Squid normally listens to port 3128
 http_port 3128
-
-# https://serverfault.com/questions/380392/squid-proxy-hiding-the-proxy
-forwarded_for delete
 
 # Uncomment and adjust the following to add a disk cache directory.
 #cache_dir ufs /var/cache/squid 100 16 256
