--- a/squid.conf
+++ b/squid.conf
@@ -1,11 +1,3 @@
-include /etc/squid/conf.d/*.conf
-#
-# Recommended minimum configuration:
-#
-
-# Example rule allowing access from your local networks.
-# Adapt to list your (internal) IP networks from where browsing
-# should be allowed
 acl localnet src 0.0.0.1-0.255.255.255  # RFC 1122 "this" network (LAN)
 acl localnet src 10.0.0.0/8             # RFC 1918 local private network (LAN)
 acl localnet src 100.64.0.0/10          # RFC 6598 shared address space (CGN)
@@ -14,7 +6,6 @@ acl localnet src 172.16.0.0/12          # RFC 1918 local private network (LAN)
 acl localnet src 192.168.0.0/16         # RFC 1918 local private network (LAN)
 acl localnet src fc00::/7               # RFC 4193 local private network range
 acl localnet src fe80::/10              # RFC 4291 link-local (directly plugged) machines
-
 acl SSL_ports port 443
 acl Safe_ports port 80          # http
 acl Safe_ports port 21          # ftp
@@ -26,67 +17,36 @@ acl Safe_ports port 280         # http-mgmt
 acl Safe_ports port 488         # gss-http
 acl Safe_ports port 591         # filemaker
 acl Safe_ports port 777         # multiling http
-
-#
-# Recommended minimum Access Permission configuration:
-#
-# Deny requests to certain unsafe ports
 http_access deny !Safe_ports
-
-# Deny CONNECT to other than secure SSL ports
 http_access deny CONNECT !SSL_ports
-
-# Only allow cachemgr access from localhost
 http_access allow localhost manager
 http_access deny manager
-
-# This default configuration only allows localhost requests because a more
-# permissive Squid installation could introduce new attack vectors into the
-# network by proxying external TCP connections to unprotected services.
 http_access allow localhost
-
-# The two deny rules below are unnecessary in this default configuration
-# because they are followed by a "deny all" rule. However, they may become
-# critically important when you start allowing external requests below them.
-
-# Protect web applications running on the same server as Squid. They often
-# assume that only local users can access them at "localhost" ports.
 http_access deny to_localhost
-
-# Protect cloud servers that provide local users with sensitive info about
-# their server via certain well-known link-local (a.k.a. APIPA) addresses.
 http_access deny to_linklocal
-
-#
-# INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
-#
+include /etc/squid/conf.d/*.conf
 
 # https://gist.github.com/jackblk/fdac4c744ddf2a0533278a38888f3caf
-auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
+auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/squid_passwd
+auth_param basic children 5
 auth_param basic realm Squid proxy-caching web server
-auth_param basic credentialsttl 24 hours
+auth_param basic credentialsttl 2 hours
 auth_param basic casesensitive off
-acl authenticated proxy_auth REQUIRED
-http_access allow authenticated
-http_access deny all
+acl auth_users proxy_auth REQUIRED
+http_access allow auth_users
 dns_v4_first on
 # https://serverfault.com/questions/380392/squid-proxy-hiding-the-proxy
 forwarded_for delete
 via off
+# catch-all rule
+http_access deny all
 
-# Squid normally listens to port 3128
 http_port 3128
-
-# Uncomment and adjust the following to add a disk cache directory.
-#cache_dir ufs /var/cache/squid 100 16 256
-
-# Leave coredumps in the first cache dir
-coredump_dir /var/cache/squid
-
-#
-# Add any of your own refresh_pattern entries above these.
-#
+coredump_dir /var/spool/squid
 refresh_pattern ^ftp:           1440    20%     10080
 refresh_pattern -i (/cgi-bin/|\?) 0     0%      0
+refresh_pattern \/(Packages|Sources)(|\.bz2|\.gz|\.xz)$ 0 0% 0 refresh-ims
+refresh_pattern \/Release(|\.gpg)$ 0 0% 0 refresh-ims
+refresh_pattern \/InRelease$ 0 0% 0 refresh-ims
+refresh_pattern \/(Translation-.*)(|\.bz2|\.gz|\.xz)$ 0 0% 0 refresh-ims
 refresh_pattern .               0       20%     4320
-include /etc/squid/conf.d.tail/*.conf
